--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "deliveroo-clone",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,18 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.5",
-    "expo-status-bar": "~1.4.4",
-    "ios": "^0.0.1",
-    "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0"
+    "@expo/webpack-config": "^0.17.2",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.4",
+    "expo": "~47.0.12",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9",
+    "i": "^0.3.7",
+    "npm": "^9.3.0",
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-react-native": "^1.7.10"
   },
   "private": true
 }
