--- a/app.json
+++ b/app.json
@@ -2,12 +2,12 @@
   "expo": {
     "name": "pizza",
     "slug": "pizza",
-    "version": "1.0.0",
+    "version": "0.65.0",
     "orientation": "portrait",
-    "icon": "./assets/logo.jpg",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/gif.gif",
+      "image": "./assets/logo.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -23,18 +23,19 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/logo.jpg",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "com.asliddin1.pizza"
     },
     "web": {
-      "favicon": "./assets/logo.jpg"
+      "favicon": "./assets/logo.png"
     },
     "extra": {
       "eas": {
-        "projectId": "31dc2fd0-4663-4ec9-9209-07b4be6f4601"
+        "projectId": "ea5f2e98-4dd7-403e-a8b3-4123be7b5157"
       }
-    }
+    },
+    "owner": "asliddin1"
   }
 }
